--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			
 			<link rel="stylesheet" href="./css/style.css"/>
-			
+			<script src="script/jquery.1.9.1.js"></script>
 			<!-- Normalize hide address bar for iOS and Android -->
 			<script src="./js/hideaddressbar.js"></script>
 			
@@ -22,40 +22,9 @@
 			<!-- Using picturefill to load conditional images and matchmedia to provide support for IE8 and below + older browsers -->
 			<script src="./js/picturefill.js"></script>
 			<script src="./js/matchmedia.js"></script>
-			<script src="script/jquery.1.9.1.js"></script>
+			
 
-	<script type="text/javascript">
-
-	$("#contact").submit(function(e){
-	  e.preventDefault();
-	  var name = $("#name").val();
-	  var email = $("#email").val();
-	  var text = $("#message").val();
-	  var dataString = 'name=' + name + '&email=' + email + '&text=' + text;
-	  function isValidEmail(emailAddress) {
-	    var pattern = new RegExp(/^((([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+(\.([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+)*)|((\x22)((((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(([\x01-\x08\x0b\x0c\x0e-\x1f\x7f]|\x21|[\x23-\x5b]|[\x5d-\x7e]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(\\([\x01-\x09\x0b\x0c\x0d-\x7f]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF]))))*(((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(\x22)))@((([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.)+(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.?$/i);
-	    return pattern.test(emailAddress);
-	  };
-	 
-	  if (isValidEmail(email) && (text.length > 20) && (name.length > 1)){
-	    $.ajax({
-	    type: "POST",
-	    url: "/php/functions.php",
-	    data: dataString,
-	    success: function(){
-	      $('.success').fadeIn(1000);
-	    }
-	    });
-	  } else{
-	    $('.error').fadeIn(1000);
-	  }
-	 
-	  return false;
-	});
-
-
-
-			</script>
+	
 
 			
 			<!--[if lt IE 9]>
@@ -216,7 +185,7 @@
 				</article>
 			</div>
 			<div id="container-footer">
-				<form id="contact">
+				<form id="contact" action="mailer.php" method="post">
 				    <fieldset class="wrapper">
 				        <legend>Contact</legend>
 				            <ul class="group">
